<resources>
    <string name="app_name">锁板测试工具</string>
    <string name="app_start">程序启动</string>

    <string name="commonSet">一般测试</string>
    <string name="boardTest">锁板测试</string>
    <string name="logs">日志</string>
    <string name="choosePort">选择串口</string>
    <string name="layer">层数</string>
    <string name="lockboardTiers">锁板层数</string>
    <string name="lockKeepTime">锁保持时间[毫秒]</string>

    <string name="get">获取</string>
    <string name="set">设置</string>
    <string name="checkVersion">固件版本</string>
    <string name="checkPower">掉电检测</string>
    <string name="readCard">读卡</string>
    <string name="writeCard">写卡</string>
    <string name="hint1">请点击按钮</string>
    <string name="locker">锁板</string>
    <string name="box">格口</string>
    <string name="relay">继电器</string>
    <string name="refresh">刷新</string>
    <string name="updateStatus">更新状态</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="portOpened">串口已打开</string>
    <string name="portClosed">串口已关闭</string>
    <string name="failed">失败</string>
    <string name="succeed">成功</string>
    <string name="openPort">打开串口</string>
    <string name="closePort">关闭串口</string>
    <string name="unlock">开锁</string>
    <string name="stop">停止</string>
    <string name="pause">暂停</string>
    <string name="Continue">继续</string>
    <string name="updateRelayStatus">更新格口状态</string>
    <string name="getLockboardTiers">获取锁板层数</string>
    <string name="setLockboardTiers">设置锁板层数</string>

    <string name="portNotOpened">串口未打开</string>

    <string translatable="false" name="action_settings">Settings</string>
    <string translatable="false" name="broadcast_unlock">android.intent.action.expressopendoor</string>
    <string translatable="false" name="broadcast_getlockstatus">android.intent.action.expressopendoorstate</string>
    <string translatable="false" name="broadcast_getinfraredstatus">android.intent.action.queryInfrared</string>
    <string translatable="false" name="broadcast_readcard">android.intent.action.rfidcardread</string>
    <string translatable="false" name="broadcast_writecard">android.intent.action.rfidcardwrite</string>
    <string translatable="false" name="broadcast_openscan">android.intent.action.openscan</string>
    <string translatable="false" name="broadcast_closescan">android.intent.action.closescan</string>
    <string translatable="false" name="broadcast_identitycard">android.intent.action.identitycard</string>

    <string translatable="false" name="broadcast_unlockresult">android.intent.action.unlockingcontent</string>
    <string translatable="false" name="broadcast_getlockstatusresult">android.intent.action.expressopendoorstateresult</string>
    <string translatable="false" name="broadcast_getinfraredstatusresult">android.intent.action.queryInfraredresult</string>
    <string translatable="false" name="broadcast_readcardresult">android.intent.action.rfidcardreadresult</string>
    <string translatable="false" name="broadcast_writecardresult">android.intent.action.rfidcardwriteresult</string>
    <string translatable="false" name="broadcast_scanresult">android.intent.action.scanresult</string>
    <string translatable="false" name="broadcast_identityresult">android.intent.action.identitycard.result</string>
    <string name="Unlockmode">开锁模式</string>
    <string name="Unlock">开锁</string>
    <string name="levelUnlock">电平开锁</string>

</resources>
