<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.LockFragment">

    <LinearLayout
        android:id="@+id/lock_Filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/lock_lblLocker"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="@string/relay"/>
        <Spinner
            android:id="@+id/lock_cboRelay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:id="@+id/lock_lblBox"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text=" - "/>
        <Spinner
            android:id="@+id/lock_cboRelay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/lock_btnUnlock"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text= "@string/unlock"/>
        <Button
            android:id="@+id/lock_btnPause"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text= "@string/pause"/>
        <!--<Space-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"/>-->

        <Button
            android:id="@+id/lock_btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text= "@string/updateStatus"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/lock_btnPause"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/lock_Filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lock_boxLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>